# community-management-software

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .graphqlrc.yaml  .stylelintrc.yaml  README.md  apollo.config.cjs  bun.lockb  ecosystem.config.cjs  package-lock.json  package.json  project.code-workspace  roadmap.org  roadmap.todo  setup.mjs
@app/backend/: modules.d.ts  nodemon.json  package.json  plain-text-loader.mjs  test-library-mode-with-express.js  test-library-mode-with-fastify.js  tsconfig.tsbuildinfo
@app/database/: .gmrc.js  nodemon.json  package.json
@app/frontend/: .eslintrc.cjs  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json
@app/graphile-worker/: .eslintrc.cjs  package.json  tsconfig.json
@app/python-worker/: README.md  nodemon.json  pyproject.toml  run.sh  testabc.py
@app/python-worker/python_worker/: __init__.py  __main__.py
backend/: .eslintrc.cjs  .ethereal  .gitignore  README.md  app.ts  build.ts  bunfig.toml  index.ts  nodemon.json  package.json  run-express.ts  schema.graphql  schema.json  shims.d.ts  test-library-mode-with-express.js  test-library-mode-with-fastify.js  test.js  tsconfig.json
database/: .gmrc  .gmrc.js  package.json
frontend/: .eslintrc.cjs  bun.lockb  codegen.yml  nuxt.config.ts  package.json  tsconfig.json
graphql/: codegen.yml  package-lock.json  package.json
graphql-queries/: codegen.yml  create-topic.graphql  fetch-topics.graphql  get-room-message.graphql
patches/: @fastify+websocket+10.0.1.patch  grafserv+0.1.1-beta.3.patch  postgraphile++grafserv+0.1.1-beta.3.patch
(+487 files in other folders)
